--- a/BaconGameJam6/BaconGameJam6.csproj
+++ b/BaconGameJam6/BaconGameJam6.csproj
@@ -39,16 +39,19 @@
     <Compile Include="Animation.cs" />
     <Compile Include="AnimationPlayer.cs" />
     <Compile Include="Circle.cs" />
+    <Compile Include="Enum\FacingDirection.cs" />
+    <Compile Include="Enum\TileCollision.cs" />
     <Compile Include="Game1.cs" />
     <Compile Include="Enemy.cs" />
     <Compile Include="Gem.cs" />
     <Compile Include="Level.cs" />
     <Compile Include="PlatformerGame.cs" />
-    <Compile Include="Player.cs" />
+    <Compile Include="Player\Player.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RandomHelper.cs" />
     <Compile Include="RectangleExtensions.cs" />
+    <Compile Include="Structures\ParticleData.cs" />
     <Compile Include="Tile.cs" />
   </ItemGroup>
   <ItemGroup>
